# ai-powered-govt-schemes-advisor

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pyproject.toml.orig
backend/alembic/: env.py
backend/alembic/versions/: 5c3c8886cc47_phase1_initial_schema.py  9f6d52af2977_phase2_drop_ivfflat_for_small_dataset.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: chat.py  match.py  profiles.py  router.py  schemes.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: models.py
backend/app/schemas/: match.py  profile.py  raw_scheme.py  scheme.py  user_profile.py
backend/app/services/chat/: chat_service.py
backend/app/services/embedding/: embedder.py  (+2 more)
backend/data/cache/: ingestion_progress.json
backend/tests/: conftest.py  test_eligibility_summary.py  test_multilingual.py  test_normalizer.py
backend/tests/api/: conftest.py  test_health_api.py  test_match_api.py  test_profiles_api.py  test_schemes_api.py
backend/tests/embedding/: test_embedder.py  test_retriever.py
backend/tests/extraction/: golden_set.json  test_extractor_eval.py  test_extractor_unit.py
backend/tests/ingestion/: test_cache.py  test_dedup.py  test_mapper.py  test_pipeline.py  test_upserter.py
backend/tests/matching/: test_llm_reranker.py  test_matching_service.py  test_rule_evaluator.py  test_scheme_matcher.py  test_semantic_reranker.py  test_sql_filter.py
backend/tests/services/: test_chat_service.py
(+105 files in other folders)
